syntax = "proto3";

package skyclust.provider.v1;

option go_package = "skyclust/api/proto/v1;providerv1";

import "google/protobuf/timestamp.proto";

// NetworkService defines the gRPC service for network operations
service NetworkService {
  // VPC Management
  rpc CreateVPC(CreateVPCRequest) returns (CreateVPCResponse);
  rpc DeleteVPC(DeleteVPCRequest) returns (DeleteVPCResponse);
  rpc ListVPCs(ListVPCsRequest) returns (ListVPCsResponse);
  rpc GetVPC(GetVPCRequest) returns (GetVPCResponse);
  
  // Subnet Management
  rpc CreateSubnet(CreateSubnetRequest) returns (CreateSubnetResponse);
  rpc DeleteSubnet(DeleteSubnetRequest) returns (DeleteSubnetResponse);
  rpc ListSubnets(ListSubnetsRequest) returns (ListSubnetsResponse);
  rpc GetSubnet(GetSubnetRequest) returns (GetSubnetResponse);
  
  // Security Group Management
  rpc CreateSecurityGroup(CreateSecurityGroupRequest) returns (CreateSecurityGroupResponse);
  rpc DeleteSecurityGroup(DeleteSecurityGroupRequest) returns (DeleteSecurityGroupResponse);
  rpc ListSecurityGroups(ListSecurityGroupsRequest) returns (ListSecurityGroupsResponse);
  rpc GetSecurityGroup(GetSecurityGroupRequest) returns (GetSecurityGroupResponse);
  rpc AuthorizeSecurityGroupIngress(AuthorizeSecurityGroupIngressRequest) returns (AuthorizeSecurityGroupIngressResponse);
  rpc RevokeSecurityGroupIngress(RevokeSecurityGroupIngressRequest) returns (RevokeSecurityGroupIngressResponse);
  rpc AuthorizeSecurityGroupEgress(AuthorizeSecurityGroupEgressRequest) returns (AuthorizeSecurityGroupEgressResponse);
  rpc RevokeSecurityGroupEgress(RevokeSecurityGroupEgressRequest) returns (RevokeSecurityGroupEgressResponse);
  
  // Load Balancer Management
  rpc CreateLoadBalancer(CreateLoadBalancerRequest) returns (CreateLoadBalancerResponse);
  rpc DeleteLoadBalancer(DeleteLoadBalancerRequest) returns (DeleteLoadBalancerResponse);
  rpc ListLoadBalancers(ListLoadBalancersRequest) returns (ListLoadBalancersResponse);
  rpc GetLoadBalancer(GetLoadBalancerRequest) returns (GetLoadBalancerResponse);
  
  // Firewall Management
  rpc CreateFirewallRule(CreateFirewallRuleRequest) returns (CreateFirewallRuleResponse);
  rpc DeleteFirewallRule(DeleteFirewallRuleRequest) returns (DeleteFirewallRuleResponse);
  rpc ListFirewallRules(ListFirewallRulesRequest) returns (ListFirewallRulesResponse);
}

// VPC Management Messages
message CreateVPCRequest {
  string cidr_block = 1;
  string region = 2;
  string name = 3;
  map<string, string> tags = 4;
}

message CreateVPCResponse {
  VPC vpc = 1;
}

message DeleteVPCRequest {
  string vpc_id = 1;
  string region = 2;
}

message DeleteVPCResponse {
  bool success = 1;
  string message = 2;
}

message ListVPCsRequest {
  string region = 1;
  map<string, string> filters = 2;
}

message ListVPCsResponse {
  repeated VPC vpcs = 1;
}

message GetVPCRequest {
  string vpc_id = 1;
  string region = 2;
}

message GetVPCResponse {
  VPC vpc = 1;
}

// Subnet Management Messages
message CreateSubnetRequest {
  string vpc_id = 1;
  string cidr_block = 2;
  string availability_zone = 3;
  string name = 4;
  map<string, string> tags = 5;
}

message CreateSubnetResponse {
  Subnet subnet = 1;
}

message DeleteSubnetRequest {
  string subnet_id = 1;
  string region = 2;
}

message DeleteSubnetResponse {
  bool success = 1;
  string message = 2;
}

message ListSubnetsRequest {
  string region = 1;
  string vpc_id = 2;
  map<string, string> filters = 3;
}

message ListSubnetsResponse {
  repeated Subnet subnets = 1;
}

message GetSubnetRequest {
  string subnet_id = 1;
  string region = 2;
}

message GetSubnetResponse {
  Subnet subnet = 1;
}

// Security Group Management Messages
message CreateSecurityGroupRequest {
  string vpc_id = 1;
  string name = 2;
  string description = 3;
  string region = 4;
  map<string, string> tags = 5;
}

message CreateSecurityGroupResponse {
  SecurityGroup security_group = 1;
}

message DeleteSecurityGroupRequest {
  string security_group_id = 1;
  string region = 2;
}

message DeleteSecurityGroupResponse {
  bool success = 1;
  string message = 2;
}

message ListSecurityGroupsRequest {
  string region = 1;
  string vpc_id = 2;
  map<string, string> filters = 3;
}

message ListSecurityGroupsResponse {
  repeated SecurityGroup security_groups = 1;
}

message GetSecurityGroupRequest {
  string security_group_id = 1;
  string region = 2;
}

message GetSecurityGroupResponse {
  SecurityGroup security_group = 1;
}

message AuthorizeSecurityGroupIngressRequest {
  string security_group_id = 1;
  string region = 2;
  repeated SecurityGroupRule rules = 3;
}

message AuthorizeSecurityGroupIngressResponse {
  bool success = 1;
  string message = 2;
}

message RevokeSecurityGroupIngressRequest {
  string security_group_id = 1;
  string region = 2;
  repeated SecurityGroupRule rules = 3;
}

message RevokeSecurityGroupIngressResponse {
  bool success = 1;
  string message = 2;
}

message AuthorizeSecurityGroupEgressRequest {
  string security_group_id = 1;
  string region = 2;
  repeated SecurityGroupRule rules = 3;
}

message AuthorizeSecurityGroupEgressResponse {
  bool success = 1;
  string message = 2;
}

message RevokeSecurityGroupEgressRequest {
  string security_group_id = 1;
  string region = 2;
  repeated SecurityGroupRule rules = 3;
}

message RevokeSecurityGroupEgressResponse {
  bool success = 1;
  string message = 2;
}

// Load Balancer Management Messages
message CreateLoadBalancerRequest {
  string name = 1;
  string type = 2; // "application", "network", "gateway"
  string scheme = 3; // "internet-facing", "internal"
  repeated string subnets = 4;
  repeated string security_groups = 5;
  string region = 6;
  map<string, string> tags = 7;
}

message CreateLoadBalancerResponse {
  LoadBalancer load_balancer = 1;
}

message DeleteLoadBalancerRequest {
  string load_balancer_id = 1;
  string region = 2;
}

message DeleteLoadBalancerResponse {
  bool success = 1;
  string message = 2;
}

message ListLoadBalancersRequest {
  string region = 1;
  map<string, string> filters = 2;
}

message ListLoadBalancersResponse {
  repeated LoadBalancer load_balancers = 1;
}

message GetLoadBalancerRequest {
  string load_balancer_id = 1;
  string region = 2;
}

message GetLoadBalancerResponse {
  LoadBalancer load_balancer = 1;
}

// Firewall Management Messages
message CreateFirewallRuleRequest {
  string name = 1;
  string vpc_id = 2;
  string direction = 3; // "ingress", "egress"
  string protocol = 4;
  string port_range = 5;
  string source_range = 6;
  string action = 7; // "allow", "deny"
  int32 priority = 8;
  map<string, string> tags = 9;
}

message CreateFirewallRuleResponse {
  FirewallRule firewall_rule = 1;
}

message DeleteFirewallRuleRequest {
  string rule_id = 1;
}

message DeleteFirewallRuleResponse {
  bool success = 1;
  string message = 2;
}

message ListFirewallRulesRequest {
  string vpc_id = 1;
  map<string, string> filters = 2;
}

message ListFirewallRulesResponse {
  repeated FirewallRule firewall_rules = 1;
}

// Common Network Types
message VPC {
  string id = 1;
  string cidr_block = 2;
  string state = 3;
  string region = 4;
  bool is_default = 5;
  map<string, string> tags = 6;
  google.protobuf.Timestamp created_at = 7;
}

message Subnet {
  string id = 1;
  string vpc_id = 2;
  string cidr_block = 3;
  string availability_zone = 4;
  string state = 5;
  int32 available_ip_address_count = 6;
  bool map_public_ip_on_launch = 7;
  map<string, string> tags = 8;
  google.protobuf.Timestamp created_at = 9;
}

message SecurityGroup {
  string id = 1;
  string name = 2;
  string description = 3;
  string vpc_id = 4;
  repeated SecurityGroupRule ingress_rules = 5;
  repeated SecurityGroupRule egress_rules = 6;
  map<string, string> tags = 7;
  google.protobuf.Timestamp created_at = 8;
}

message SecurityGroupRule {
  string protocol = 1; // "tcp", "udp", "icmp", "-1" (all)
  int32 from_port = 2;
  int32 to_port = 3;
  string cidr_block = 4;
  string source_security_group_id = 5;
  string description = 6;
}

message LoadBalancer {
  string id = 1;
  string name = 2;
  string dns_name = 3;
  string type = 4;
  string scheme = 5;
  string state = 6;
  repeated string availability_zones = 7;
  repeated string security_groups = 8;
  string vpc_id = 9;
  map<string, string> tags = 10;
  google.protobuf.Timestamp created_at = 11;
}

message FirewallRule {
  string id = 1;
  string name = 2;
  string vpc_id = 3;
  string direction = 4;
  string protocol = 5;
  string port_range = 6;
  string source_range = 7;
  string action = 8;
  int32 priority = 9;
  bool disabled = 10;
  map<string, string> tags = 11;
  google.protobuf.Timestamp created_at = 12;
}

